--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Admin.AdminDashboard"
+            android:label="@string/title_activity_admin_dashboard"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
